--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <button class="btn-prev">Previous</button>
     <button class="btn-next">NEXT</button>
     <section class="movie-grid">
-      <div class="movie-card">
+     <!--  <div class="movie-card">
         <div class="movie-card-front">
           <img
             src="https://image.tmdb.org/t/p/w300/r7vmZjiyZw9rpJMQJdXpjgiCOk9.jpg"
@@ -41,7 +41,7 @@
             <li class="movie-genre">Horror</li>
           </div>
         </div>
-      </div> 
+      </div>  -->
     </section>
 
     <script src="js/index.js"></script>
