--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
   </head>
   <body>
     <h1 class="header">SITHS Movie Database</h1>
+    <h2 class="search-header">
+      <a href="search.html" class="search-header-link">
+        Looking For Something Specific?
+      </a>
+    </h2>
     <h2 class="top-rated">Our Top Rated Movies</h2>
     <button class="btn-prev">Previous</button>
     <button class="btn-next">NEXT</button>
